# Liver

./: README.md  app-release.apk  settings.gradle
LiverSdk/: build.gradle  proguard-rules.pro
LiverSdk/src/androidTest/java/com/lihui/android/liversdk/: ExampleInstrumentedTest.java
LiverSdk/src/main/: AndroidManifest.xml
LiverSdk/src/main/cpp/: AndroidLog.h  CMakeLists.txt  LiverSdk.cpp  ParseSps.cpp  ParseSps.h  PullCallJava.cpp  PullCallJava.h  RtmpPull.cpp  RtmpPull.h  RtmpPush.cpp  RtmpPush.h
LiverSdk/src/main/java/com/lihui/android/liversdk/: ConnectUrlCallback.java  LiverNative.java  LiverNativeCallback.java  LiverSdkManager.java
LiverSdk/src/test/java/com/lihui/android/liversdk/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/lihui/android/liver/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lihui/android/liver/: MyApplication.java
app/src/main/res/drawable/: selector_bq.xml  selector_cq.xml  selector_gq.xml  selector_pusj.xml  selector_start.xml  shape_load.xml  shape_push_nor.xml  shape_push_press.xml  shape_start_normal.xml  shape_start_pressed.xml
app/src/main/res/layout/: activity_main.xml  activity_pull.xml  activity_push.xml  activity_push2.xml  activity_setting.xml  item_filter.xml
app/src/main/res/raw/: fragment_shader_beauty.glsl
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lihui/android/liver/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
